#831 create via put (#836)
* #831 create via put

* #831 fix typo

* #831 merge dev fix conflicts
