# atramhasis/views/crud.py
@@ -17,11 +17,10 @@ from skosprovider_sqlalchemy.providers import SQLAlchemyProvider
 from sqlalchemy.exc import IntegrityError
 from sqlalchemy.exc import NoResultFound
 
-from atramhasis import mappers
 from atramhasis import utils
 from atramhasis.audit import audit
 from atramhasis.cache import invalidate_scheme_cache
-from atramhasis.data.datamanagers import ProviderDataManager
+from atramhasis.data.models import IDGenerationStrategy
 from atramhasis.errors import ConceptNotFoundException
 from atramhasis.errors import ConceptSchemeNotFoundException
 from atramhasis.errors import SkosRegistryNotFoundException
@@ -30,8 +29,6 @@ from atramhasis.json_processors import provider
 from atramhasis.mappers import map_concept
 from atramhasis.mappers import map_conceptscheme
 from atramhasis.protected_resources import protected_operation
-from atramhasis.data.models import IDGenerationStrategy
-from atramhasis.utils import db_provider_to_skosprovider
 from atramhasis.utils import from_thing
 from atramhasis.utils import internal_providers_only
 
@@ -310,12 +307,21 @@ class AtramhasisCrud:
         openapi=True
     )
     def update_provider(self):
-        db_provider = provider.update_provider(
-            provider_id=self.request.matchdict["id"],
-            json_data=self.request.openapi_validated.body,
-            session=self.request.db,
-        )
-        return utils.db_provider_to_skosprovider(db_provider)
+        try:
+            db_provider = provider.update_provider(
+                provider_id=self.request.matchdict["id"],
+                json_data=self.request.openapi_validated.body,
+                session=self.request.db,
+            )
+            return utils.db_provider_to_skosprovider(db_provider)
+        except NoResultFound:
+            db_provider = provider.create_provider(
+                json_data=self.request.openapi_validated.body,
+                session=self.request.db,
+                skos_registry=self.request.skos_registry,
+            )
+            self.request.response.status_code = 201
+            return utils.db_provider_to_skosprovider(db_provider)
 
     @view_config(
         route_name='atramhasis.provider',
